# Specteros-OS

./: .firebaserc  Cargo.toml  PUSH_TO_GITHUB.md  README.md  firebase.json  mis.txy
.github/workflows/: deploy-firebase.yml
core/cli/specteros-shell/: Cargo.toml
core/cli/specteros-shell/src/: commands.rs  main.rs  theme.rs
core/daemons/specteros-airlockd/: Cargo.toml
core/daemons/specteros-airlockd/src/: lib.rs  main.rs
core/daemons/specteros-auditd/: Cargo.toml
core/daemons/specteros-auditd/src/: lib.rs  main.rs
core/daemons/specteros-guardian/: Cargo.toml
core/daemons/specteros-guardian/src/: lib.rs  main.rs
core/daemons/specteros-init/: Cargo.toml
core/daemons/specteros-init/src/: main.rs
core/daemons/specteros-netd/: Cargo.toml
core/daemons/specteros-netd/src/: lib.rs  main.rs
core/daemons/specteros-policyd/: Cargo.toml
core/daemons/specteros-policyd/src/: lib.rs  main.rs
core/daemons/specteros-shardd/: Cargo.toml
core/daemons/specteros-shardd/src/: lib.rs  main.rs
core/daemons/specteros-updated/: Cargo.toml
core/daemons/specteros-updated/src/: lib.rs  main.rs
core/libs/gk-config/src/: lib.rs
core/libs/specteros-crypto/: Cargo.toml
core/libs/specteros-crypto/src/: keys.rs  lib.rs
distro/: Dockerfile
distro/live-build/: build.sh
distro/live-build/config/hooks/live/: specteros-browser.hook.chroot  specteros-custom-ui.hook.chroot  specteros.hook.chroot
distro/scripts/: build-debian-iso.sh  build-fedora.sh  build-real-iso.sh  build-termux-chroot.sh  setup-debian-chroot.sh
editions/debian/backend/debian-backend/: Cargo.toml
editions/debian/packaging/debian/: control  rules  specteros-airlockd.postinst  specteros-airlockd.postrm  specteros-auditd.postinst  specteros-auditd.postrm  specteros-guardian.postinst  specteros-guardian.postrm  specteros-init.postinst  specteros-init.postrm  specteros-netd.postinst  specteros-netd.postrm  specteros-policyd.postinst  specteros-policyd.postrm  specteros-shardd.postinst  specteros-shardd.postrm  specteros-updated.postinst  specteros-updated.postrm
editions/fedora/backend/fedora-backend/: Cargo.toml
editions/shared/systemd/: specteros-airlockd.service  specteros-auditd.service  specteros-guardian.service  specteros-init.service  specteros-netd.service  specteros-policyd.service  specteros-shardd.service  specteros-updated.service  specteros-updated.timer
interfaces/proto/specteros/v1/: airlock.proto  audit.proto  common.proto  network.proto  policy.proto  shard.proto  update.proto
packaging/vnc-web/: Cargo.toml
tests/harness/: Cargo.toml
tests/harness/src/: lib.rs
ui/desktop/: Cargo.toml
ui/desktop/src/: main.rs  panel.rs  shell.rs  wallpaper.rs
ui/desktop/src/apps/: file_manager.rs  mod.rs  network_monitor.rs  settings.rs  shard_manager.rs
ui/tui/: Cargo.toml
website/: about.html  blog.html  index.html  netlify.toml
website/css/: style.css
website/docs/: changelog.html  installation.html  verification.html
website/js/: main.js
