[workspace]
resolver = "2"
members = [
  "xtask",
  "core/libs/gk-types",
  "core/libs/gk-config",
  "core/libs/gk-ipc",
  "core/libs/gk-crypto",
  "core/libs/gk-persistence",
  "core/libs/gk-policy",
  "core/libs/gk-audit",
  "core/libs/gk-platform-api",
  "core/libs/gk-privexec",
  "core/libs/gk-metadata-sanitizer",
  "core/daemons/specteros-init",
  "core/daemons/specteros-auditd",
  "core/daemons/specteros-policyd",
  "core/daemons/specteros-shardd",
  "core/daemons/specteros-netd",
  "core/daemons/specteros-airlockd",
  "core/daemons/specteros-updated",
  "core/daemons/specteros-guardian",
  "core/cli/gkctl",
  "core/cli/specteros-shell",
  "editions/debian/backend/debian-backend",
  "editions/fedora/backend/fedora-backend",
  "tests/harness",
  "ui/desktop",
  "ui/tui",
  "packaging/vnc-web",
]

[workspace.package]
edition = "2021"
license = "Apache-2.0"
version = "0.1.0"

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
unwrap_used = "deny"
