[package]
name = "specteros-test-harness"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
gk-config = { path = "../../core/libs/gk-config" }
gk-policy = { path = "../../core/libs/gk-policy" }
gk-audit = { path = "../../core/libs/gk-audit" }
gk-crypto = { path = "../../core/libs/gk-crypto" }
gk-persistence = { path = "../../core/libs/gk-persistence" }
specteros-policyd = { path = "../../core/daemons/specteros-policyd" }
specteros-shardd = { path = "../../core/daemons/specteros-shardd" }
specteros-netd = { path = "../../core/daemons/specteros-netd" }
specteros-airlockd = { path = "../../core/daemons/specteros-airlockd" }
specteros-auditd = { path = "../../core/daemons/specteros-auditd" }
specteros-guardian = { path = "../../core/daemons/specteros-guardian" }

[dev-dependencies]
tempfile = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
