[package]
name = "specteros-tui"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
# Terminal UI framework
ratatui = "0.26"
crossterm = "0.27"

# Specteros integration
gk-ipc = { path = "../../core/libs/gk-ipc" }
gk-policy = { path = "../../core/libs/gk-policy" }
gk-audit = { path = "../../core/libs/gk-audit" }

# Async
tokio = { version = "1.0", features = ["full"] }

# Utilities
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
