[package]
name = "specteros-shell"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gk-ipc = { path = "../../libs/gk-ipc" }
gk-policy = { path = "../../libs/gk-policy" }
gk-audit = { path = "../../libs/gk-audit" }
