[package]
name = "specteros-airlockd"
version = "0.1.0"
edition = "2021"

[dependencies]
gk-audit = { path = "../../libs/gk-audit" }
gk-config = { path = "../../libs/gk-config" }
gk-ipc = { path = "../../libs/gk-ipc" }
gk-persistence = { path = "../../libs/gk-persistence" }
gk-metadata-sanitizer = { path = "../../libs/gk-metadata-sanitizer" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
