[package]
name = "specteros-updated"
version = "0.1.0"
edition = "2021"

[dependencies]
gk-audit = { path = "../../libs/gk-audit" }
gk-crypto = { path = "../../libs/gk-crypto" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "1.0"

[dev-dependencies]
tempfile = "3.0"
