[package]
name = "specteros-crypto"
version.workspace = true
edition.workspace = true

[dependencies]
ed25519-dalek.workspace = true
x25519-dalek.workspace = true
argon2.workspace = true
chacha20poly1305.workspace = true
blake3.workspace = true
sha2.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
zeroize.workspace = true
rand = "0.8"

[dev-dependencies]
hex = "0.4"
